// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps matches the last snapshot 1`] = `
Object {
  "checkInvitation": [Function],
}
`;

exports[`mapStateToProps matches the latest snapshot 1`] = `
Object {
  "invitationCodes": Object {
    "accessCode": "anyaccesscode",
    "invitationToken": "anytoken",
  },
  "navToInviteExpired": [Function],
  "navToSignup": [Function],
}
`;

exports[`mergeProps matches the last snapshot 1`] = `
Object {
  "checkInvitation": [Function],
  "dispatchProp1": "dispatchProp1",
  "ownProp1": "ownProp1",
  "stateProp1": "stateProp1",
}
`;
